--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link  rel="stylesheet" href="./style.css>
 </head>
-<style>
-    .card-container{
-        display: flex ;
-        gap: 20px;
-        
-    }
-    .card-body{
-        border: 2px solid rgb(227, 227, 241);
-    }
-    
-</style>
+
 
 <body>
     <!--navbar-->
